--- a/index.html
+++ b/index.html
@@ -37,78 +37,19 @@
         <div class="main__wrapper">
           <h1 class="main__title">Popular Movies</h1>
           <ul class="main__list">
-            <li class="movie__item">
+            <!-- <li class="movie__item">
               <img
                 src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
                 alt="movie-poster"
                 class="movie__img"
+                loading="lazy"
               />
-              <button class="movie__fav" type="button"></button>
               <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
+                <h2 class="movie__title">Hulk <span>2003</span></h2>
+                <p class="movie__type">Action, Sci-fi</p>
               </div>
-            </li>
-            <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-              />
               <button class="movie__fav" type="button"></button>
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
-              </div>
-            </li>
-            <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-              />
-              <button class="movie__fav" type="button"></button>
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
-              </div>
-            </li>
-            <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-              />
-              <button class="movie__fav" type="button"></button>
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
-              </div>
-            </li>
-            <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-              />
-              <button class="movie__fav" type="button"></button>
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
-              </div>
-            </li>
-            <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-              />
-              <button class="movie__fav" type="button"></button>
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk</h2>
-                <p class="movie__type">Action,Sci-fi</p>
-              </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -117,11 +58,13 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
-          <a href="/index.html" class="logo"><sup>The</sup>TRAILERS</a>
-          <p class="footer__copyright">All rights reserved</p>
+          <p class="footer__copyright">
+            All rights reserved <span class="f__year"></span>
+          </p>
         </div>
       </div>
     </footer>
+    <script src="js/movies.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
