--- a/index.html
+++ b/index.html
@@ -36,20 +36,61 @@
       <div class="container">
         <div class="main__wrapper">
           <h1 class="main__title">Popular Movies</h1>
-          <ul class="main__list">
-            <!-- <li class="movie__item">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMzQwZDg1MGEtN2E5My00ZDJlLWI4MzItM2U2MjJhYzlkNmEzXkEyXkFqcGdeQXVyNDAxNjkxNjQ@._V1_SX.png"
-                alt="movie-poster"
-                class="movie__img"
-                loading="lazy"
-              />
-              <div class="movie__textbox">
-                <h2 class="movie__title">Hulk <span>2003</span></h2>
-                <p class="movie__type">Action, Sci-fi</p>
+          <ul class="main__list"></ul>
+          <ul class="main__list-movies">
+            <li class="element__item element">
+              <div class="element__top">
+                <img
+                  src="https://m.media-amazon.com/images/M/MV5BMDJiZGE5NzYtZGU3Zi00NDQwLWFhMjAtNTM0MDM2ZTljMjAzXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1.png"
+                  alt="ratched"
+                  class="element__img"
+                />
               </div>
-              <button class="movie__fav" type="button"></button>
-            </li> -->
+              <div class="element__bottom">
+                <div class="element__writers">
+                  <p class="element__writer">Aaron Horvath</p>
+                  <p class="element__writer">Michael Jelenic</p>
+                </div>
+                <div class="element__name">
+                  <p class="element__title">The Super Mario Bros. Movie</p>
+                </div>
+                <div class="element__genre">
+                  <span class="element__type-first">Animation</span>
+                  <span class="element__type-second">Animation</span>
+                  <span class="element__type-third">Animation</span>
+                </div>
+                <div class="element__stats">
+                  <span class="element__play">▶️</span>
+                  <span class="element__rating"
+                    >Rating <span class="span__rating-value">PG</span></span
+                  >
+                  <span class="element__release"
+                    >Release
+                    <span class="span__release-value">April 7, 2023</span></span
+                  >
+                  <span class="element__boxoffice"
+                    >Boxoffice
+                    <span class="span__boxoffice-value">574,223,720</span></span
+                  >
+                  <span class="element__length"
+                    >Length
+                    <span class="span__length-value">126 min</span></span
+                  >
+                </div>
+                <div class="element__inner">
+                  <p class="element__desription">
+                    A plumber named Mario travels through an underground
+                    labyrinth with his brother, Luigi, trying to save a captured
+                    princess.
+                  </p>
+                  <div class="element__ratings">
+                    <p class="element__imdb">46/100</p>
+                    <p class="element__rt">46/100</p>
+                    <p class="element__metacritic">46/100</p>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
