--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="element__item element">
               <div class="element__top">
                 <img
-                  src="https://m.media-amazon.com/images/M/MV5BMDJiZGE5NzYtZGU3Zi00NDQwLWFhMjAtNTM0MDM2ZTljMjAzXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1.png"
+                  src="https://m.media-amazon.com/images/M/MV5BOTJhNzlmNzctNTU5Yy00N2YwLThhMjQtZDM0YjEzN2Y0ZjNhXkEyXkFqcGdeQXVyMTEwMTQ4MzU5._V1_SX.png"
                   alt="ratched"
                   class="element__img"
                 />
@@ -60,24 +60,30 @@
                   <span class="element__type-third">Animation</span>
                 </div>
                 <div class="element__stats">
-                  <span class="element__play">▶️</span>
-                  <span class="element__rating"
-                    >Rating <span class="span__rating-value">PG</span></span
+                  <div class="element__play borders"></div>
+                  <span class="element__rating borders"
+                    >Rating
+                    <span class="span__rating-value rotate">PG</span></span
                   >
-                  <span class="element__release"
+                  <span class="element__release borders"
                     >Release
-                    <span class="span__release-value">April 7, 2023</span></span
+                    <span class="span__release-value rotate"
+                      >April 7, 2023</span
+                    ></span
                   >
-                  <span class="element__boxoffice"
+                  <span class="element__boxoffice borders"
                     >Boxoffice
-                    <span class="span__boxoffice-value">574,223,720</span></span
+                    <span class="span__boxoffice-value rotate"
+                      >574,223,720</span
+                    ></span
                   >
-                  <span class="element__length"
+                  <span class="element__length borders"
                     >Length
-                    <span class="span__length-value">126 min</span></span
+                    <span class="span__length-value rotate">126 min</span></span
                   >
                 </div>
                 <div class="element__inner">
+                  <p class="element__info">Description</p>
                   <p class="element__desription">
                     A plumber named Mario travels through an underground
                     labyrinth with his brother, Luigi, trying to save a captured
