--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="main__wrapper">
           <h1 class="main__title">Popular Movies</h1>
           <ul class="main__list"></ul>
-          <ul class="main__list-movies">
-            <li class="element__item element">
+          <ul class="main__list-movies" data-="">
+            <!-- <li class="element__item element no-show">
               <div class="element__top">
                 <img
                   src="https://m.media-amazon.com/images/M/MV5BOTJhNzlmNzctNTU5Yy00N2YwLThhMjQtZDM0YjEzN2Y0ZjNhXkEyXkFqcGdeQXVyMTEwMTQ4MzU5._V1_SX.png"
@@ -48,8 +48,11 @@
               </div>
               <div class="element__bottom">
                 <div class="element__writers">
-                  <p class="element__writer">Aaron Horvath</p>
-                  <p class="element__writer">Michael Jelenic</p>
+                  <div class="element__container">
+                    <p class="element__writer">Aaron Horvath</p>
+                    <p class="element__writer">Michael Jelenic</p>
+                  </div>
+                  <button class="element__close" type="button"></button>
                 </div>
                 <div class="element__name">
                   <p class="element__title">The Super Mario Bros. Movie</p>
@@ -96,7 +99,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
