--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="main__wrapper">
           <h1 class="main__title">Popular Movies</h1>
           <ul class="main__list"></ul>
-          <ul class="main__list-movies" data-="">
-            <!-- <li class="element__item element no-show">
+          <ul class="main__list-movies">
+            <li class="element__item element no-show">
               <div class="element__top">
                 <img
                   src="https://m.media-amazon.com/images/M/MV5BOTJhNzlmNzctNTU5Yy00N2YwLThhMjQtZDM0YjEzN2Y0ZjNhXkEyXkFqcGdeQXVyMTEwMTQ4MzU5._V1_SX.png"
@@ -99,7 +99,7 @@
                   </div>
                 </div>
               </div>
-            </li> -->
+            </li>
           </ul>
         </div>
       </div>
