--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <h1 class="main__title">Popular Movies</h1>
           <ul class="main__list"></ul>
           <ul class="main__list-movies">
-            <li class="element__item element no-show">
+            <!-- <li class="element__item element">
               <div class="element__top">
                 <img
-                  src="https://m.media-amazon.com/images/M/MV5BOTJhNzlmNzctNTU5Yy00N2YwLThhMjQtZDM0YjEzN2Y0ZjNhXkEyXkFqcGdeQXVyMTEwMTQ4MzU5._V1_SX.png"
+                  src="https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1.png"
                   alt="ratched"
                   class="element__img"
                 />
@@ -99,7 +99,7 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
