--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
               class="movie__input"
               placeholder="Search for a movie"
             />
+            <div class="search-list" id="search-list">
+              <!-- list here -->
+              <div class="search-list-item">
+                <div class="search-item-thumbnail">
+                  <img src="/img/medium-cover.jpg" />
+                </div>
+                <div class="search-item-info">
+                  <h3>Guardians of the Galaxy Vol. 2</h3>
+                  <p>2017</p>
+                </div>
+              </div>
+            </div>
           </form>
         </div>
         <div class="movie__container">
